--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -4,18 +4,22 @@ experiment:
   seed: 1
 
 data:
-  name: 'synth'
+  name: 'synth'  # Options: ['MNIST', 'synth']
   path: '../local/data'
   train_ratio: 0.8
   num_workers: 8
-  latent_dim: 3
-  observed_dim: 784
-  n_dev_samples: 50000
-  n_test_samples: 10000
+  latent_dim: 3  # Only for synthetic
+  observed_dim: 784  # Only for synthetic
+  n_dev_samples: 50000  # Only for synthetic
+  n_test_samples: 10000  # Only for synthetic
 
 model:
   name: 'ae'
-  input_shape: 784
+  latent_dim : 48
+  backbone:
+    name: 'linear'  # Options: ['linear', 'conv']
+    hidden_dims: !!python/list [32, 64]
+    data_shape: !!python/tuple [784]
 
 training:
   batch_size: 64
