--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -14,7 +14,7 @@ data:
   n_test_samples: 10000  # Only for synthetic
 
 model:
-  name: 'vae'
+  name: 's_vae'
   latent_dim : 16
   kl_coeff: 0.01
   backbone:
