--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -15,7 +15,7 @@ data:
 
 model:
   name: 'vae'
-  latent_dim : 16
+  latent_dim : 128
   kl_coeff: 0.01
   backbone:
     name: 'linear'  # Options: ['linear', 'conv']
@@ -24,7 +24,7 @@ model:
 
 training:
   batch_size: 128
-  max_epochs: 100
+  max_epochs: 10
   optimizer:
     name: 'adam'
     lr: 0.0001
@@ -39,7 +39,10 @@ training:
     monitor: 'valid/loss'
     save_top_k: 5
 
-gpu: 1
+gpu: 0
+
+continuity:
+  checkpoint_path: '../../local/logs/name/version_0/checkpoints/epoch=9.ckpt'
 
 
 
