--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -14,16 +14,16 @@ data:
   n_test_samples: 10000  # Only for synthetic
 
 model:
-  name: 'vae'
-  latent_dim : 128
-  kl_coeff: 0.01
+  name: 's_vae'
+  latent_dim: 3
+  kl_coeff: 0
   backbone:
     name: 'linear'  # Options: ['linear', 'conv']
     hidden_dims: !!python/list [32, 64]
     data_shape: !!python/tuple [1, 28, 28]
 
 training:
-  batch_size: 128
+  batch_size: 32
   max_epochs: 100
   optimizer:
     name: 'adam'
@@ -40,9 +40,6 @@ training:
     save_top_k: 5
 
 gpu: 1
-
-continuity:
-  checkpoint_path: '../../local/logs/name/version_0/checkpoints/epoch=9.ckpt'
 
 
 
