--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -16,9 +16,9 @@ data:
 model:
   name: 's_vae'
   latent_dim: 3
-  kl_coeff: 0
+  kl_coeff: 1
   backbone:
-    name: 'conv'  # Options: ['linear', 'conv']
+    name: 'linear'  # Options: ['linear', 'conv']
     hidden_dims: !!python/list [32, 64]
     data_shape: !!python/tuple [1, 28, 28]
 
@@ -27,7 +27,7 @@ training:
   max_epochs: 100
   optimizer:
     name: 'adam'
-    lr: 0.0001
+    lr: 0.01
   scheduler:
     name: 'plateau'
     mode: 'min'
@@ -39,7 +39,7 @@ training:
     monitor: 'valid/loss'
     save_top_k: 5
 
-gpu: 1
+gpu: 0
 
 
 
