--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -16,10 +16,10 @@ data:
 model:
   name: 's_vae'
   latent_dim: 3
-  kl_coeff: 0
+  kl_coeff: 1
   backbone:
-    name: 'linear'  # Options: ['linear', 'conv']
-    hidden_dims: !!python/list [32, 64]
+    name: 'conv'  # Options: ['linear', 'conv']
+    hidden_dims: !!python/list [64, 32]
     data_shape: !!python/tuple [1, 28, 28]
 
 training:
@@ -27,7 +27,7 @@ training:
   max_epochs: 100
   optimizer:
     name: 'adam'
-    lr: 0.0001
+    lr: 0.00001
   scheduler:
     name: 'plateau'
     mode: 'min'
