WIP make it train

--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -14,9 +14,8 @@ data:
   n_test_samples: 10000  # Only for synthetic
 
 model:
-  name: 's_vae'
+  name: 'vae'
   latent_dim: 3
-  kl_coeff: 1
   backbone:
     name: 'conv'  # Options: ['linear', 'conv']
     hidden_dims: !!python/list [64, 32]
@@ -24,10 +23,11 @@ model:
 
 training:
   batch_size: 32
-  max_epochs: 100
+  max_epochs: 10
+  fix_var: 0.0001
   optimizer:
     name: 'adam'
-    lr: 0.00001
+    lr: 0.0001
   scheduler:
     name: 'plateau'
     mode: 'min'
