--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -17,14 +17,14 @@ model:
   name: 'vae'
   latent_dim: 3
   backbone:
-    name: 'conv'  # Options: ['linear', 'conv']
+    name: 'linear'  # Options: ['linear', 'conv']
     hidden_dims: !!python/list [64, 32]
     data_shape: !!python/tuple [1, 28, 28]
 
 training:
   batch_size: 32
   max_epochs: 10
-  fix_var: 0.0001
+  fix_var: -1.3
   optimizer:
     name: 'adam'
     lr: 0.0001
