--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -17,13 +17,13 @@ model:
   name: 'vae'
   latent_dim: 3
   backbone:
-    name: 'linear'  # Options: ['linear', 'conv']
-    hidden_dims: !!python/list [64, 32]
+    name: 'linear_bern'  # Options: ['linear', 'linear_bern' ,'conv']
+    hidden_dims: !!python/list [128]
     data_shape: !!python/tuple [1, 28, 28]
 
 training:
-  batch_size: 32
-  max_epochs: 10
+  batch_size: 128
+  max_epochs: 100
   fix_var: -1.3
   optimizer:
     name: 'adam'
@@ -39,7 +39,7 @@ training:
     monitor: 'valid/loss'
     save_top_k: 5
 
-gpu: 1
+gpu: 0
 
 
 
