Anomaly Detection and KNN

--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -15,19 +15,19 @@ data:
 
 model:
   name: 's_vae'
-  latent_dim: 3
-  kl_coeff: 1
+  latent_dim: 3 # start with simple! 
+  kl_coeff: 0
   backbone:
-    name: 'conv'  # Options: ['linear', 'conv']
-    hidden_dims: !!python/list [64, 32]
+    name: 'linear'  # Options: ['linear', 'conv']
+    hidden_dims: !!python/list [32, 64]
     data_shape: !!python/tuple [1, 28, 28]
 
 training:
   batch_size: 32
-  max_epochs: 100
+  max_epochs: 10
   optimizer:
     name: 'adam'
-    lr: 0.00001
+    lr: 0.0001
   scheduler:
     name: 'plateau'
     mode: 'min'
@@ -38,8 +38,14 @@ training:
   ckpt_callback:
     monitor: 'valid/loss'
     save_top_k: 5
+  anomaly: True
 
-gpu: 1
+gpu: 0
 
-
-
+anomaly: 
+  checkpoint_path: "/s_vae/local/logs/name/version_0/checkpoints/epoch=20.ckpt" # need model not trained on anomaly class
+                    
+knn:
+  checkpoint_path: "/s_vae/local/logs/name/version_1/checkpoints/epoch=20.ckpt" # need model trained on all classes
+  n_neighbors: 3
+  
