--- a/experiment/config.yaml
+++ b/experiment/config.yaml
@@ -17,13 +17,13 @@ model:
   name: 'vae'
   latent_dim: 3
   backbone:
-    name: 'linear_bern'  # Options: ['linear', 'linear_bern' ,'conv']
-    hidden_dims: !!python/list [128]
+    name: 'linear'  # Options: ['linear', 'linear_bern', 'conv']
+    hidden_dims: !!python/list [64, 32]
     data_shape: !!python/tuple [1, 28, 28]
 
 training:
-  batch_size: 128
-  max_epochs: 100
+  batch_size: 32
+  max_epochs: 10
   fix_var: -1.3
   optimizer:
     name: 'adam'
